@@ -410,25 +410,6 @@ bool CGUIWindowMusicSongs::OnMessage(CGUIMessage& message)
       {
         OnRipCD();
       }
-      else if (m_viewControl.HasControl(iControl))  // list/thumb control
-      {
-        int iItem = m_viewControl.GetSelectedItem();
-        int iAction = message.GetParam1();
-
-        // use play button to add folders of items to temp playlist
-        if (iAction == ACTION_PLAYER_PLAY)
-        {
-          // if playback is paused or playback speed != 1, return
-          if (g_application.IsPlayingAudio())
-          {
-            if (g_application.m_pPlayer->IsPaused()) return true;
-            if (g_application.GetPlaySpeed() != 1) return true;
-          }
-
-          // not playing audio, or playback speed == 1
-          PlayItem(iItem);
-        }
-      }
     }
     break;
   }
